// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json patcher helper to require an object at a certain key works when deeply nested  1`] = `
Object {
  "favorite": Object {
    "color": "red",
    "foods": Object {
      "healthy": Object {},
    },
  },
}
`;

exports[`json patcher helper to require an object at a certain key works when deeply nested  2`] = `
Array [
  Object {
    "intent": "require object: favorite,foods,healthy",
    "patches": Array [
      Object {
        "op": "add",
        "path": "/favorite/foods",
        "value": Object {
          "healthy": Object {},
        },
      },
      Object {
        "op": "add",
        "path": "/favorite/foods/healthy",
        "value": Object {},
      },
    ],
  },
]
`;

exports[`json patcher helper to require an object at a certain key works when the key is already an object 1`] = `
Object {
  "favorite": Object {
    "color": "red",
  },
}
`;

exports[`json patcher helper to require an object at a certain key works when the key is already an object 2`] = `
Array [
  Object {
    "intent": "require object: favorite",
    "patches": Array [],
  },
]
`;

exports[`json patcher helper to require an object at a certain key works when the key is nested 1`] = `
Object {
  "favorite": Object {
    "color": "red",
    "foods": Object {},
  },
}
`;

exports[`json patcher helper to require an object at a certain key works when the key is nested 2`] = `
Array [
  Object {
    "intent": "require object: favorite,foods",
    "patches": Array [
      Object {
        "op": "add",
        "path": "/favorite/foods",
        "value": Object {},
      },
    ],
  },
]
`;

exports[`json patcher helper to require an object at a certain key works when the key is not present at root 1`] = `
Object {
  "contacts": Object {},
  "favorite": Object {
    "color": "red",
  },
}
`;

exports[`json patcher helper to require an object at a certain key works when the key is not present at root 2`] = `
Array [
  Object {
    "intent": "require object: contacts",
    "patches": Array [
      Object {
        "op": "add",
        "path": "/contacts",
        "value": Object {},
      },
    ],
  },
]
`;

exports[`json patcher invalid patches do not apply 1`] = `
Object {
  "error": "Cannot perform an \`add\` operation at the desired path
name: OPERATION_PATH_CANNOT_ADD
index: 0
operation: {
  \\"path\\": \\"/favorite/city/0\\",
  \\"op\\": \\"add\\",
  \\"value\\": \\"Philadelphia\\"
}
tree: {
  \\"favorite\\": {
    \\"color\\": \\"red\\"
  }
}",
  "success": false,
}
`;

exports[`json patcher patches can be built up sequentially 1`] = `
Object {
  "favorite": Object {
    "city": Array [
      Object {
        "name": "Philadelphia",
      },
    ],
    "color": "red",
  },
}
`;

exports[`json patcher valid patches apply 1`] = `
Object {
  "favorite": Object {
    "city": "Philadelphia",
    "color": "red",
  },
}
`;
